[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/WalkingEnemy.png" type="Texture" id=2]
[ext_resource path="res://Enemies/WalkingEnemy.gd" type="Script" id=3]
[ext_resource path="res://Player/WalkingEnemyHurtBoxShape.tres" type="Shape2D" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 6 )

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="WalkingEnemy" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, -9 )
texture = ExtResource( 2 )
flip_h = true
hframes = 2

[node name="Collider" parent="." index="1"]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
anims/Walk = SubResource( 2 )

[node name="RayCastFloorLeft" type="RayCast2D" parent="." index="3"]
position = Vector2( -3, 0 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 2

[node name="RayCastFloorRight" type="RayCast2D" parent="." index="4"]
position = Vector2( 3, 0 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 2

[node name="RayCastWallLeft" type="RayCast2D" parent="." index="5"]
position = Vector2( 0, -7 )
enabled = true
cast_to = Vector2( -6, 0 )
collision_mask = 2

[node name="RayCastWallRight" type="RayCast2D" parent="." index="6"]
position = Vector2( 0, -7 )
enabled = true
cast_to = Vector2( 6, 0 )
collision_mask = 2

[node name="HurtBox" parent="." index="7"]
COLLISION_SHAPE = ExtResource( 4 )

[node name="EnemyStats" parent="." index="8"]
MAX_HEALTH = 5
